--- a/Dice Roll Simulator/index.html
+++ b/Dice Roll Simulator/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Dice Roll Simulator/script.css" />
+    <link rel="stylesheet" href="/Dice Roll Simulator/style.css" />
     <title>Dice Roll Simulator</title>
   </head>
   <body>
